# nexus-ai-works

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  conftest.py  entrypoint.py  extract_captions.js  extract_captions2.js  extract_captions3.js  file:mem-demo?mode=memory&cache=shared  file:mem-demo?mode=memory&cache=shared-shm  file:mem-demo?mode=memory&cache=shared-wal  package.json  pyproject.toml  setup.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
config/: mcp_servers.yaml  org.yaml  schema.py
config/chains/: full-pipeline.yaml
config/modules/: factory.yaml
docs/: DESIGN.md  PRIVACY_POLICY.md  TERMS_OF_SERVICE.md  agor-analysis-dev-module.md  kanban-plan-v1.md  mcp-session-worktree-upgrade-plan.md
factory/: cli.py  env.py  features.py  org.py  role_loader.py  runner.py  template.py  test_env.py  test_features.py  test_role_loader.py  test_usage.py  usage.py  warehouse.py  workflow.py
factory/engine/: pool.py  (+6 more)
gateway/: __init__.py  auth.py  csrf.py  models.py  rate_limit.py  server.py  signature.py  test_agent_routes.py  test_routes.py  test_server.py  test_signature.py
marketplace/: __init__.py  admin.py  api.py  auth.py  main.py  models.py  signature.py  store.py  test_admin_signature.py  test_api.py
templates/: analyst.yaml  reviewer.yaml  super.yaml  writer.yaml
webui/: index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.app.json  vite.config.ts  vitest.config.ts
(+189 files in other folders)
