[project]
name = "ai-factory"
version = "0.5.0"
requires-python = ">=3.11"
dependencies = [
    "nanobot-ai>=0.2.0",
    "pydantic>=2",
    "pyyaml",
    "sqlite-vec>=0.1",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "httpx>=0.28",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]
