[project]
name = "nexus"
version = "1.0.0"
description = "Nexus AI Works — 可自由编排的个人 AI 工作平台"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2",
    "pyyaml",
    "sqlite-vec>=0.1",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "httpx>=0.28",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]
